Color Scheme Changed

--- a/coupons.html
+++ b/coupons.html
@@ -34,7 +34,7 @@
   }
 
   .coupon-discount {
-    background: #6777ef;
+    background: #00a9da;
     color: white;
     font-size: 28px;
     font-weight: bold;
@@ -71,7 +71,7 @@
     display: inline-block;
     font-family: monospace;
     font-size: 16px;
-    color: #6777ef;
+    color: #00a9da;
     font-weight: bold;
   }
 
@@ -97,7 +97,7 @@
   }
 
   .coupon-btn {
-    background: #6777ef;
+    background: #00a9da;
     color: white;
     border: none;
     padding: 8px 25px;
