--- a/performance.html
+++ b/performance.html
@@ -462,7 +462,7 @@
       datasets: [{
         label: 'Impressions',
         data: [1200000, 1900000, 1500000, 1800000, 2100000, 1900000, 2200000, 2400000, 2300000, 2500000, 2700000, 3000000],
-        borderColor: '#6777ef',
+        borderColor: '#00a9da',
         backgroundColor: 'rgba(103, 119, 239, 0.1)',
         borderWidth: 2,
         fill: true
