--- a/transactions.html
+++ b/transactions.html
@@ -63,7 +63,7 @@
   }
 
   .receipt-label {
-    color: #6777ef;
+    color: #00a9da;
     font-weight: bold;
   }
 
@@ -191,10 +191,10 @@
             <div class="col-4">
               <!-- Transaction Receipt -->
               <div class="receipt-card">
-                <div class="receipt-header" style="border-bottom: 2px dashed #6777ef;">
+                <div class="receipt-header" style="border-bottom: 2px dashed #00a9da;">
                   <div class="receipt-title">
-                    <i class="fas fa-receipt mr-2" style="color: #6777ef;"></i>
-                    <span style="color: #6777ef;">#TX-5841</span>
+                    <i class="fas fa-receipt mr-2" style="color: #00a9da;"></i>
+                    <span style="color: #00a9da;">#TX-5841</span>
                   </div>
                   <div class="receipt-status badge badge-pill badge-success" style="color: #fff;">Completed
                   </div>
@@ -223,10 +223,10 @@
             <div class="col-4">
               <!-- Transaction Receipt -->
               <div class="receipt-card">
-                <div class="receipt-header" style="border-bottom: 2px dashed #6777ef;">
+                <div class="receipt-header" style="border-bottom: 2px dashed #00a9da;">
                   <div class="receipt-title">
-                    <i class="fas fa-receipt mr-2" style="color: #6777ef;"></i>
-                    <span style="color: #6777ef;">#TX-5842</span>
+                    <i class="fas fa-receipt mr-2" style="color: #00a9da;"></i>
+                    <span style="color: #00a9da;">#TX-5842</span>
                   </div>
                   <div class="receipt-status badge badge-pill badge-danger" style="color: #fff;">Rejected
                   </div>
@@ -255,10 +255,10 @@
             <div class="col-4">
               <!-- Transaction Receipt -->
               <div class="receipt-card">
-                <div class="receipt-header" style="border-bottom: 2px dashed #6777ef;">
+                <div class="receipt-header" style="border-bottom: 2px dashed #00a9da;">
                   <div class="receipt-title">
-                    <i class="fas fa-receipt mr-2" style="color: #6777ef;"></i>
-                    <span style="color: #6777ef;">#TX-5843</span>
+                    <i class="fas fa-receipt mr-2" style="color: #00a9da;"></i>
+                    <span style="color: #00a9da;">#TX-5843</span>
                   </div>
                   <div class="receipt-status badge badge-pill badge-warning" style="color: #fff;">Pending
                   </div>
