--- a/view-advertisers.html
+++ b/view-advertisers.html
@@ -20,7 +20,7 @@
 </head>
 <style>
   :root {
-    --primary-color: #6777ef;
+    --primary-color: #00a9da;
     --primary-light: #8594f4;
     --primary-dark: #5666d6;
     --text-light: #fff;
@@ -371,7 +371,7 @@
         <div class="profile-header text-center">
           <div class="row justify-content-center">
             <div class="col-12 text-center">
-              <img src="https://ui-avatars.com/api/?name=John+Doe&background=6777ef&color=fff&size=150" alt="Profile"
+              <img src="https://ui-avatars.com/api/?name=John+Doe&background=00a9da&color=fff&size=150" alt="Profile"
                 class="profile-avatar rounded-circle mb-3">
               <h2 class="mb-2">John Doe</h2>
               <div class="mb-2">
@@ -540,7 +540,7 @@
                 <div class="card p-0">
                   <div class="card-body p-0">
                     <table class="table table-sm" style="font-size: 0.875rem;">
-                      <thead class="text-white" style="background-color: #6777ef;">
+                      <thead class="text-white" style="background-color: #00a9da;">
                         <tr>
                           <th scope="col" class="pl-3 py-2">ID</th>
                           <th scope="col" class="py-2">Name</th>
@@ -670,7 +670,7 @@
                     <!-- Create Button -->
                     <div class="d-flex justify-content-end mt-4">
                       <button class="btn btn-primary btn-sm px-4 py-2 text-uppercase font-weight-bold"
-                        style="background-color: #6777ef; border-color: #6777ef;">
+                        style="background-color: #00a9da; border-color: #00a9da;">
                         <i class="fas fa-plus-circle mr-2"></i>Create Profile
                       </button>
                     </div>
