--- a/billing.html
+++ b/billing.html
@@ -319,7 +319,7 @@
           <div class="container">
             <div class="row justify-content-center">
               <div class="col-12 text-center">
-                <img src="https://ui-avatars.com/api/?name=John+Doe&background=6777ef&color=fff&size=150" alt="Profile"
+                <img src="https://ui-avatars.com/api/?name=John+Doe&background=00a9da&color=fff&size=150" alt="Profile"
                   class="profile-avatar rounded-circle mb-3">
                 <h2 class="mb-2">John Doe</h2>
                 <p class="mb-3"><i class="fas fa-map-marker-alt mr-2"></i>San Francisco, CA</p>
