--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     background-color: white;
     color: var(--primary-color);
     font-weight: 500;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%236777EF' viewBox='0 0 16 16'%3E%3Cpath d='M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z'/%3E%3C/svg%3E");
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%2300a9da' viewBox='0 0 16 16'%3E%3Cpath d='M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z'/%3E%3C/svg%3E");
     background-repeat: no-repeat;
     background-position: right 1.25rem center;
     background-size: 12px;
@@ -415,34 +415,34 @@
                   <div class="swiper-slide">
                     <div class="advertiser-card card h-100 border-0 shadow-sm" style="width: 300px;">
                       <div class="card-header d-flex justify-content-between align-items-center"
-                        style="background-color: #6777ef; color: white;">
+                        style="background-color: #00a9da; color: white;">
                         <h5 class="mb-0">Advertiser Name</h5>
                         <span class="badge badge-pill badge-danger">Inactive</span>
                       </div>
                       <div class="card-body">
                         <div class="advertiser-attributes">
                           <div class="attribute-item">
-                            <i class="fas fa-percentage mr-2" style="color: #6777ef;"></i>
+                            <i class="fas fa-percentage mr-2" style="color: #00a9da;"></i>
                             <span class="attribute-label">Commission:</span>
                             <span class="attribute-value">15%</span>
                           </div>
                           <div class="attribute-item">
-                            <i class="fas fa-map-marker-alt mr-2" style="color: #6777ef;"></i>
+                            <i class="fas fa-map-marker-alt mr-2" style="color: #00a9da;"></i>
                             <span class="attribute-label">Region:</span>
                             <span class="attribute-value">North America</span>
                           </div>
                           <div class="attribute-item">
-                            <i class="fas fa-calendar-alt mr-2" style="color: #6777ef;"></i>
+                            <i class="fas fa-calendar-alt mr-2" style="color: #00a9da;"></i>
                             <span class="attribute-label">Since:</span>
                             <span class="attribute-value">Jan 2022</span>
                           </div>
                           <div class="attribute-item">
-                            <i class="fas fa-tags mr-2" style="color: #6777ef;"></i>
+                            <i class="fas fa-tags mr-2" style="color: #00a9da;"></i>
                             <span class="attribute-label">Category:</span>
                             <span class="attribute-value">Technology</span>
                           </div>
                           <div class="attribute-item">
-                            <i class="fas fa-star mr-2" style="color: #6777ef;"></i>
+                            <i class="fas fa-star mr-2" style="color: #00a9da;"></i>
                             <span class="attribute-label">Rating:</span>
                             <span class="attribute-value">4.8/5</span>
                           </div>
@@ -451,7 +451,7 @@
                       <div class="card-footer">
                         <div class="row justify-content-around">
                           <a href="./view-advertisers.html" class="btn btn-sm"
-                            style="background-color: #6777ef; color: white;">View Details</a>
+                            style="background-color: #00a9da; color: white;">View Details</a>
                           <button class="btn btn-sm btn-success" style="color: white;">Active</button>
                         </div>
                       </div>
@@ -462,34 +462,34 @@
                   <div class="swiper-slide">
                     <div class="advertiser-card card h-100 border-0 shadow-sm" style="width: 300px;">
                       <div class="card-header d-flex justify-content-between align-items-center"
-                        style="background-color: #6777ef; color: white;">
+                        style="background-color: #00a9da; color: white;">
                         <h5 class="mb-0">Advertiser Two</h5>
                         <span class="badge badge-pill badge-success">Active</span>
                       </div>
                       <div class="card-body">
                         <div class="advertiser-attributes">
                           <div class="attribute-item">
-                            <i class="fas fa-percentage mr-2" style="color: #6777ef;"></i>
+                            <i class="fas fa-percentage mr-2" style="color: #00a9da;"></i>
                             <span class="attribute-label">Commission:</span>
                             <span class="attribute-value">12%</span>
                           </div>
                           <div class="attribute-item">
-                            <i class="fas fa-map-marker-alt mr-2" style="color: #6777ef;"></i>
+                            <i class="fas fa-map-marker-alt mr-2" style="color: #00a9da;"></i>
                             <span class="attribute-label">Region:</span>
                             <span class="attribute-value">Europe</span>
                           </div>
                           <div class="attribute-item">
-                            <i class="fas fa-calendar-alt mr-2" style="color: #6777ef;"></i>
+                            <i class="fas fa-calendar-alt mr-2" style="color: #00a9da;"></i>
                             <span class="attribute-label">Since:</span>
                             <span class="attribute-value">Mar 2021</span>
                           </div>
                           <div class="attribute-item">
-                            <i class="fas fa-tags mr-2" style="color: #6777ef;"></i>
+                            <i class="fas fa-tags mr-2" style="color: #00a9da;"></i>
                             <span class="attribute-label">Category:</span>
                             <span class="attribute-value">Finance</span>
                           </div>
                           <div class="attribute-item">
-                            <i class="fas fa-star mr-2" style="color: #6777ef;"></i>
+                            <i class="fas fa-star mr-2" style="color: #00a9da;"></i>
                             <span class="attribute-label">Rating:</span>
                             <span class="attribute-value">4.5/5</span>
                           </div>
@@ -498,7 +498,7 @@
                       <div class="card-footer">
                         <div class="row justify-content-around">
                           <a href="./view-advertisers.html" class="btn btn-sm"
-                            style="background-color: #6777ef; color: white;">View Details</a>
+                            style="background-color: #00a9da; color: white;">View Details</a>
                           <button class="btn btn-sm btn-success" style="color: white;">Active</button>
                         </div>
                       </div>
@@ -509,34 +509,34 @@
                   <div class="swiper-slide">
                     <div class="advertiser-card card h-100 border-0 shadow-sm" style="width: 300px;">
                       <div class="card-header d-flex justify-content-between align-items-center"
-                        style="background-color: #6777ef; color: white;">
+                        style="background-color: #00a9da; color: white;">
                         <h5 class="mb-0">Advertiser Two</h5>
                         <span class="badge badge-pill badge-success">Active</span>
                       </div>
                       <div class="card-body">
                         <div class="advertiser-attributes">
                           <div class="attribute-item">
-                            <i class="fas fa-percentage mr-2" style="color: #6777ef;"></i>
+                            <i class="fas fa-percentage mr-2" style="color: #00a9da;"></i>
                             <span class="attribute-label">Commission:</span>
                             <span class="attribute-value">12%</span>
                           </div>
                           <div class="attribute-item">
-                            <i class="fas fa-map-marker-alt mr-2" style="color: #6777ef;"></i>
+                            <i class="fas fa-map-marker-alt mr-2" style="color: #00a9da;"></i>
                             <span class="attribute-label">Region:</span>
                             <span class="attribute-value">Europe</span>
                           </div>
                           <div class="attribute-item">
-                            <i class="fas fa-calendar-alt mr-2" style="color: #6777ef;"></i>
+                            <i class="fas fa-calendar-alt mr-2" style="color: #00a9da;"></i>
                             <span class="attribute-label">Since:</span>
                             <span class="attribute-value">Mar 2021</span>
                           </div>
                           <div class="attribute-item">
-                            <i class="fas fa-tags mr-2" style="color: #6777ef;"></i>
+                            <i class="fas fa-tags mr-2" style="color: #00a9da;"></i>
                             <span class="attribute-label">Category:</span>
                             <span class="attribute-value">Finance</span>
                           </div>
                           <div class="attribute-item">
-                            <i class="fas fa-star mr-2" style="color: #6777ef;"></i>
+                            <i class="fas fa-star mr-2" style="color: #00a9da;"></i>
                             <span class="attribute-label">Rating:</span>
                             <span class="attribute-value">4.5/5</span>
                           </div>
@@ -545,7 +545,7 @@
                       <div class="card-footer">
                         <div class="row justify-content-around">
                           <a href="./view-advertisers.html" class="btn btn-sm"
-                            style="background-color: #6777ef; color: white;">View Details</a>
+                            style="background-color: #00a9da; color: white;">View Details</a>
                           <button class="btn btn-sm btn-success" style="color: white;">Active</button>
                         </div>
                       </div>
@@ -556,34 +556,34 @@
                   <div class="swiper-slide">
                     <div class="advertiser-card card h-100 border-0 shadow-sm" style="width: 300px;">
                       <div class="card-header d-flex justify-content-between align-items-center"
-                        style="background-color: #6777ef; color: white;">
+                        style="background-color: #00a9da; color: white;">
                         <h5 class="mb-0">Advertiser Two</h5>
                         <span class="badge badge-pill badge-success">Active</span>
                       </div>
                       <div class="card-body">
                         <div class="advertiser-attributes">
                           <div class="attribute-item">
-                            <i class="fas fa-percentage mr-2" style="color: #6777ef;"></i>
+                            <i class="fas fa-percentage mr-2" style="color: #00a9da;"></i>
                             <span class="attribute-label">Commission:</span>
                             <span class="attribute-value">12%</span>
                           </div>
                           <div class="attribute-item">
-                            <i class="fas fa-map-marker-alt mr-2" style="color: #6777ef;"></i>
+                            <i class="fas fa-map-marker-alt mr-2" style="color: #00a9da;"></i>
                             <span class="attribute-label">Region:</span>
                             <span class="attribute-value">Europe</span>
                           </div>
                           <div class="attribute-item">
-                            <i class="fas fa-calendar-alt mr-2" style="color: #6777ef;"></i>
+                            <i class="fas fa-calendar-alt mr-2" style="color: #00a9da;"></i>
                             <span class="attribute-label">Since:</span>
                             <span class="attribute-value">Mar 2021</span>
                           </div>
                           <div class="attribute-item">
-                            <i class="fas fa-tags mr-2" style="color: #6777ef;"></i>
+                            <i class="fas fa-tags mr-2" style="color: #00a9da;"></i>
                             <span class="attribute-label">Category:</span>
                             <span class="attribute-value">Finance</span>
                           </div>
                           <div class="attribute-item">
-                            <i class="fas fa-star mr-2" style="color: #6777ef;"></i>
+                            <i class="fas fa-star mr-2" style="color: #00a9da;"></i>
                             <span class="attribute-label">Rating:</span>
                             <span class="attribute-value">4.5/5</span>
                           </div>
@@ -592,7 +592,7 @@
                       <div class="card-footer">
                         <div class="row justify-content-around">
                           <a href="./view-advertisers.html" class="btn btn-sm"
-                            style="background-color: #6777ef; color: white;">View Details</a>
+                            style="background-color: #00a9da; color: white;">View Details</a>
                           <button class="btn btn-sm btn-success" style="color: white;">Active</button>
                         </div>
                       </div>
@@ -603,34 +603,34 @@
                   <div class="swiper-slide">
                     <div class="advertiser-card card h-100 border-0 shadow-sm" style="width: 300px;">
                       <div class="card-header d-flex justify-content-between align-items-center"
-                        style="background-color: #6777ef; color: white;">
+                        style="background-color: #00a9da; color: white;">
                         <h5 class="mb-0">Advertiser Two</h5>
                         <span class="badge badge-pill badge-success">Active</span>
                       </div>
                       <div class="card-body">
                         <div class="advertiser-attributes">
                           <div class="attribute-item">
-                            <i class="fas fa-percentage mr-2" style="color: #6777ef;"></i>
+                            <i class="fas fa-percentage mr-2" style="color: #00a9da;"></i>
                             <span class="attribute-label">Commission:</span>
                             <span class="attribute-value">12%</span>
                           </div>
                           <div class="attribute-item">
-                            <i class="fas fa-map-marker-alt mr-2" style="color: #6777ef;"></i>
+                            <i class="fas fa-map-marker-alt mr-2" style="color: #00a9da;"></i>
                             <span class="attribute-label">Region:</span>
                             <span class="attribute-value">Europe</span>
                           </div>
                           <div class="attribute-item">
-                            <i class="fas fa-calendar-alt mr-2" style="color: #6777ef;"></i>
+                            <i class="fas fa-calendar-alt mr-2" style="color: #00a9da;"></i>
                             <span class="attribute-label">Since:</span>
                             <span class="attribute-value">Mar 2021</span>
                           </div>
                           <div class="attribute-item">
-                            <i class="fas fa-tags mr-2" style="color: #6777ef;"></i>
+                            <i class="fas fa-tags mr-2" style="color: #00a9da;"></i>
                             <span class="attribute-label">Category:</span>
                             <span class="attribute-value">Finance</span>
                           </div>
                           <div class="attribute-item">
-                            <i class="fas fa-star mr-2" style="color: #6777ef;"></i>
+                            <i class="fas fa-star mr-2" style="color: #00a9da;"></i>
                             <span class="attribute-label">Rating:</span>
                             <span class="attribute-value">4.5/5</span>
                           </div>
@@ -639,7 +639,7 @@
                       <div class="card-footer">
                         <div class="row justify-content-around">
                           <a href="./view-advertisers.html" class="btn btn-sm"
-                            style="background-color: #6777ef; color: white;">View Details</a>
+                            style="background-color: #00a9da; color: white;">View Details</a>
                           <button class="btn btn-sm btn-success" style="color: white;">Active</button>
                         </div>
                       </div>
