--- a/overview.html
+++ b/overview.html
@@ -121,7 +121,7 @@
             <li class="menu-header">advertisers management</li>
             <li class="dropdown">
               <a href="#" class="menu-toggle nav-link has-dropdown"><i
-                  data-feather="copy"></i><span>Advertisers</span></a>
+                  data-feather="users"></i><span>Advertisers</span></a>
               <ul class="dropdown-menu">
                 <li><a class="nav-link" href="./my-advertisers.html">My Advertisers</a></li>
                 <li><a class="nav-link" href="#">New Advertisers</a></li>
@@ -131,7 +131,7 @@
             <li class="menu-header">reports management</li>
             <li class="dropdown">
               <a href="#" class="menu-toggle nav-link has-dropdown"><i
-                  data-feather="copy"></i><span>Reporting</span></a>
+                  data-feather="bar-chart-2"></i><span>Reporting</span></a>
               <ul class="dropdown-menu">
                 <li><a class="nav-link" href="./transactions.html">Transactions</a></li>
                 <li><a class="nav-link" href="./performance.html">Performance</a></li>
@@ -140,7 +140,7 @@
             <li class="menu-header">creativity</li>
             <li class="dropdown">
               <a href="#" class="menu-toggle nav-link has-dropdown"><i
-                  data-feather="copy"></i><span>Promotional</span></a>
+                  data-feather="tag"></i><span>Promotional</span></a>
               <ul class="dropdown-menu">
                 <li><a class="nav-link" href="./coupons.html">Coupons</a></li>
                 <li><a class="nav-link" href="./deep-links.html">Deep Links</a></li>
@@ -149,7 +149,7 @@
             </li>
             <li class="menu-header">finance management</li>
             <li class="dropdown active">
-              <a href="#" class="menu-toggle nav-link has-dropdown"><i data-feather="copy"></i><span>Finance</span></a>
+              <a href="#" class="menu-toggle nav-link has-dropdown"><i data-feather="credit-card"></i><span>Finance</span></a>
               <ul class="dropdown-menu">
                 <li class="active"><a class="nav-link" href="./overview.html">Overview</a></li>
                 <li><a class="nav-link" href="./payments.html">Payments</a></li>
@@ -157,7 +157,7 @@
             </li>
             <li class="menu-header">tools management</li>
             <li class="dropdown">
-              <a href="#" class="menu-toggle nav-link has-dropdown"><i data-feather="copy"></i><span>Tools</span></a>
+              <a href="#" class="menu-toggle nav-link has-dropdown"><i data-feather="paperclip"></i><span>Tools</span></a>
               <ul class="dropdown-menu">
                 <li><a class="nav-link" href="./links.html">Link Generator</a></li>
                 <li><a class="nav-link" href="./api.html">API Integration</a></li>
@@ -166,7 +166,7 @@
             </li>
             <li class="menu-header">settings</li>
             <li class="dropdown">
-              <a href="#" class="menu-toggle nav-link has-dropdown"><i data-feather="copy"></i><span>Settings</span></a>
+              <a href="#" class="menu-toggle nav-link has-dropdown"><i data-feather="settings"></i><span>Settings</span></a>
               <ul class="dropdown-menu">
                 <li><a class="nav-link" href="./my-profile.html">Profile</a></li>
                 <li><a class="nav-link" href="./webs.html">Websites</a></li>
