--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
   .form-group {
     margin-bottom: 1.75rem;
   }
-
   label {
     color: var(--primary-color);
     font-weight: 500;
@@ -127,6 +126,7 @@
     padding: 0 1.25rem;
     border-radius: 8px 0 0 8px !important;
   }
+
 
   .form-control {
     height: 50px;
@@ -231,7 +231,7 @@
             </li>
             <li class="menu-header">settings</li>
             <li class="dropdown">
-              <a href="#" class="menu-toggle nav-link has-dropdown"><i data-feather="info"></i><span>Settings</span></a>
+              <a href="#" class="menu-toggle nav-link has-dropdown"><i data-feather="settings"></i><span>Settings</span></a>
               <ul class="dropdown-menu">
                 <li><a class="nav-link" href="./my-profile.html">Profile</a></li>
                 <li><a class="nav-link" href="./webs.html">Websites</a></li>
